data/derived/comb/progs/unify/prog4563.ml.out
Characters 20-24:
  let _ = digitsOfInt 3124;;
                      ^^^^
Error: This expression has type int but an expression was expected of type
         int list
